[package]
name = "logos-display"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Dulfer"]
repository = "https://github.com/Rafaeltheraven/logos_display"
license = "MIT"
keywords = ["proc-macros", "logos", "display", "string", "macros"]
categories = ["development-tools", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"

[dev-dependencies]
assert-tokenstreams-eq = "0.1.0"

[lib]
proc-macro = true